add links to the header links

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
     <nav>
         <ul>
-            <li>Header Logo</li>
-            <li>Header Link One</li>
-            <li>Header Link Two</li>
-            <li>Header Link Three</li>
+           <li class="logo">Header Logo</li>
+           <li><a href="">Header Link One</a></li>
+           <li><a href="">Header Link Two</a></li>
+           <li><a href="">Header Link Three</a></li>
         </ul>
               
     </nav>
-
+        
         <div class="hero">
           <h1>This Website is awesome</h1>
           <p>This website has some subtext that goes here under the main title. It is a smaller font and a lower contrast</p>
