add sign up to the hero message

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class="hero">
           <h1>This Website is awesome</h1>
           <p>This website has some subtext that goes here under the main title. It is a smaller font and a lower contrast</p>
+          <p>Sign up</p>
           <div>This is a square placeholder for an image</div>
         </div>
    <div>
