create a rectangle that acts as placeholder for image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <h1>This Website is awesome</h1>
           <p>This website has some subtext that goes here under the main title. It is a smaller font and a lower contrast</p>
           <p>Sign up</p>
-          <div>This is a square placeholder for an image</div>
+          <div class="rectangle">This is a square placeholder for an image</div>
         </div>
    <div>
     <h2>Some random information</h2>
