properly align the hero content and change the hero sign up tag to button

--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
     </nav>
         
         <div class="hero">
-          <h1>This Website is awesome</h1>
-          <p>This website has some subtext that goes here under the main title. It is a smaller font and a lower contrast</p>
-          <p>Sign up</p>
-          <div class="rectangle">This is a square placeholder for an image</div>
+            <div>
+                <h1>This Website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It is a smaller font and a lower contrast</p>
+                <button>Sign up</button>
+            </div>
+        <div class="rectangle">This is a square placeholder for an image</div>
         </div>
    <div>
     <h2>Some random information</h2>
