--- a/index.html
+++ b/index.html
@@ -26,13 +26,28 @@
             </div>
         <div class="rectangle">This is a square placeholder for an image</div>
         </div>
-   <div>
+    <div class="body_content">
     <h2>Some random information</h2>
     <div class="img_container">
-        <div>This is some subset under an illustrator or image</div>
-        <div>This is some subset under an illustrator or image</div>
-        <div>This is some subset under an illustrator or image</div>
-        <div>This is some subset under an illustrator or image</div>
+        <div class="smaller_img_container">
+            <div class="image"></div>
+            <p>This is some subset under an illustrator or image</p>
+        </div>
+       
+        <div class="smaller_img_container">
+            <div  class="image"></div>
+            <p>This is some subset under an illustrator or image</p>
+        </div>
+
+        <div class="smaller_img_container">
+            <div  class="image"></div>
+            <p>This is some subset under an illustrator or image</p>
+        </div>
+
+        <div class="smaller_img_container">
+            <div  class="image image4"></div>
+            <p>This is some subset under an illustrator or image</p>
+        </div>
     </div>
    </div>
 
