center the quote

--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
     </div>
    </div>
 
-   <div>
+   <div class="body_content_2">
     <p>This is an important quote or a testimonial from a customer. Maybe
         its just filling up space or maybe people read it. Who knows? All I 
         know is that it looks nice.
     </p>
-    <p>-The God of Thunder</p>
+    <p class="author">-The God of Thunder</p>
    </div>
 
    <footer>
