align the footer content

--- a/index.html
+++ b/index.html
@@ -60,9 +60,15 @@
    </div>
 
    <footer>
-    <p>Call to action. Its time!</p>
-    <p>Sign up for our product by clicking that button right over there</p>
-    <button>Sign up</button>
+    <div  class="call_to_action">
+        <div class="content">
+            <p>Call to action. Its time!</p>
+            <p>Sign up for our product by clicking that button right over there</p>
+        </div>
+        
+        <button>Sign up</button>
+    </div>
+    
    </footer>
 </body>
 </html>
