put border around footer button and change the color of footer background and call to action backgrond

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
    <footer>
     <div  class="call_to_action">
         <div class="content">
-            <p>Call to action. Its time!</p>
-            <p>Sign up for our product by clicking that button right over there</p>
+            <p style=" color: #F9FAF8; font-size: 18px;">Call to action. Its time!</p>
+            <p style="margin-top: -16px">Sign up for our product by clicking that button right over there</p>
         </div>
         
         <button>Sign up</button>
